2004-12-31  Manuel Guesdon <mguesdon@orange-concept.com>
	* GSWAdaptors/common/GSWStats.c:
		o fixed type
	* GSWExtensions.framework/GSWCollapsibleComponentContent.m
		o replaced numberWithBool: by GSWNumberXX
	* GSWExtensions.framework/GSWLongResponsePage.m:
		o replaced [context senderID] by GSWContext_senderID()
	* GSWExtensionsGSW.framework/GSWCacheElement.m:
		o use GSWDynamicElement_evaluateValueInContext
		o replaced numberWithBool: by GSWNumberXX
	* GSWeb.framework/GSWAction.h:
		o added -existingSession
	* GSWeb.framework/GSWAction.m:
		o added -existingSession
		o fixed application -logWithFormat:arguments:
	* GSWeb.framework/GSWActiveImage.m
		o use IMPs
		o use GSWIntNumber()
	* GSWeb.framework/GSWApplication+Defaults.m
		o use GSWIntNumber()
	* GSWeb.framework/GSWApplication.h:
		o added -contextClass
		o added -responseClass
		o added -requestClass
	* GSWeb.framework/GSWApplication.m:
		o added -contextClass
		o added -responseClass
		o added -requestClass
		o replaced some [NSDate date] by GSWTime_now()
		o added +initialized to call GSWInitializeAllMisc();
		o removed [xx count] in 'for' loops
	* GSWeb.framework/GSWAssociation.[hm]:
		o use static EONull instead of calling [xxNULL null] each time
		o removed xxInObject:
		o replaced numberWithBool: by GSWNumberXX
	* GSWeb.framework/GSWBindingNameAssociation.[hm]
		o replaced xxInObject: by xxInComponent:
		o replace xxInObject: by xxInComponent:
	* GSWeb.framework/GSWBrowser.m
		o use IMPs
		o use GSWIntNumber()
		o removed [xx count] in 'for' loops
	* GSWeb.framework/GSWBundle.m:
		o use GSWIntNumber()
		o replaced a -stringWithFormat:		
	* GSWeb.framework/GSWCheckBox.m:
		o use IMPs
	* GSWeb.framework/GSWCheckBoxList.m:
		o use IMPs
		o removed [xx count] in 'for' loops
	* GSWeb.framework/GSWClientSideScript.m:
		o use IMPs
	* GSWeb.framework/GSWComponent.m:
		o removed [xx count] in 'for' loops
		o use IMPs
	* GSWeb.framework/GSWComponentContent.m:
		o use IMPs