@@ -1,3 +1,9 @@
+2005-01-19  David Wetzel <dave@turbocat.de>
+        * GSWeb.framework/GSWElementID.m:
+                o set static SEL to NULL first
+        * GSWeb.framework/GSWDefaultAdaptor.m:
+                o fix for __APPLE__
+
 2004-12-31  Manuel Guesdon <mguesdon@orange-concept.com>
 	* GSWAdaptors/common/GSWStats.c:
 		o fixed type
